# 41934

./: .gitignore  BUILD_DOCS.md  CONTRIBUTING  LearningObjectives.md  README.md  Resources.md  TechStack.md  _config.yml  conf.py  environment.yml  index.md  index.rst  pyproject.toml
A1__OpenBIM/: readme.md
A2__FutureBIM/: readme.md
A3__UseCase/: readme.md
A3__Use_Case/: readme.md
A4__FinalProject/: readme.md
A5__Project Reflection/: readme.md
A5__ProjectReflection/: readme.md
Activities/: BlenderClassification.md  BlenderScriptIntro.md  ClassificationIfcOpenShell.md  GitIntro.md  IfcOpenShellBasic.md  IfcOpenShellClassification.md  Intro to Python  IntrotoPython  IntrotoPython.md  SystemEnvScriptIntro.md  index.md
Assignments/: A1.md  A2.md  A3.md  A4.md  A5.md  README.md  index.md
Concepts/: 3DP.md  AIM.md  BCF.md  BIM.md  BIMExecutionPlan.md  BPMN.md  Blender.md  BlenderBIM.md  BusinessAndSocietalValue.md  CDE.md  Clash.md  Classification.md  CommandLine.md  DevelopmentMethodology.md  DigitalTwin.md  Dimensions.md  Entities  Entities.md  FAIR.md  GIT.md  GUID.md  Graph.md  IDE  IDE.md  IDS.md  IFC.js.md  IFC.md  IFCFileAnalyzer.md  ISO19650.md  Ifc Rules.docx  Inkscape.md  Jupyter.md  LOD.md  Levels.md  LinkedData.md  MIDP.md  MVD.md  MarkDown.md  NodeRed  OpenBIM.md  (+14 more)
Example files/: README.md
Example_files/: README.md
Examples/: README.md  index.md
Focus/: Architecture.md  Build.md  Indoor.md  README.md  Structure.md  Sustainability.md  index.md
LearningObjectives/: README.md
Roles/: Analyst.md  Guru.md  Manager.md  Modeller.md  README.md  (+2 more)
(+243 files in other folders)
